--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "seed:moods": "node seeds/moodsSeeder.js"
   },
   
   "keywords": [],
