--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --esm src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "seed:moods:dev": "ts-node-dev --transpile-only src/seeds/moodsSeeder.ts",
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "bcryptjs": "^2.4.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2"
